--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,29 +1,10 @@
-- name: facebook
-  url: https://www.facebook.com/example
-  icon: ri:facebook-fill
-  color: '#1877F2'
+- name: github
+  url: https://github.com/atutal
+  icon: ri:github-fill
+  color: '#9f8800'
 
-- name: instagram
-  url: https://www.instagram.com/example
-  icon: ri:instagram-fill
-  color: '#E4405F'
+- name: linkedin
+  url: https://www.linkedin.com/in/anil-t-a12b81209/
+  icon: ri:linkedin-fill
+  color: '#9f8800'
 
-- name: x
-  url: https://x.com/example
-  icon: ri:twitter-x-fill
-  color: '#1D9BF0'
-
-- name: mastodon
-  url: https://mastodon.social/@example
-  icon: ri:mastodon-fill
-  color: '#6364FF'
-
-- name: whatsapp
-  url: https://wa.me/1XXXXXXXXXX
-  icon: ri:whatsapp-fill
-  color: '#25D366'
-
-- name: youtube
-  url: https://www.youtube.com/@example
-  icon: ri:youtube-fill
-  color: '#FF0000'
